--- a/src/app/components/person/customer/show-customer/show-customer.component.html
+++ b/src/app/components/person/customer/show-customer/show-customer.component.html
@@ -1,15 +1,15 @@
 <p-card class="w-12 h-full">
     <ng-template pTemplate="header">
       <div class="flex justify-content-between flex-wrap">
-        <h3 class="ml-4">Branches</h3>
+        <h3 class="ml-4">Customers</h3>
         <div class="mt-2 mr-2">
           <a
             pButton
             pRipple
-            label="Add Branch"
+            label="Add Customer"
             icon="pi pi-user-plus"
             class="bg-cyan-600"
-            [routerLink]="['/branch/new']"
+            [routerLink]="['/persons/customer/new']"
           >
           </a>
         </div>
@@ -17,19 +17,27 @@
     </ng-template>
   
     <p>
-      <p-table [value]="branches">
+      <p-table [value]="customers">
         <ng-template pTemplate="header">
           <tr>
+            <th>DNI</th>
             <th>Name</th>
-            <th>Location</th>
+            <th>Address</th>
+            <th>Phone Number</th>
+            <th>Mail</th>
+            <th>Type</th>
             <th class="flex justify-content-center flex-wrap">Actions</th>
           </tr>
         </ng-template>
   
-        <ng-template pTemplate="body" let-branch>
+        <ng-template pTemplate="body" let-customer>
           <tr>
-            <td>{{ branch.nameB }}</td>
-            <td>{{ branch.location }}</td>
+            <td>{{ customer.dni }}</td>
+            <td>{{ customer.fullname }}</td>
+            <td>{{ customer.address }}</td>
+            <td>{{ customer.phoneNumber }}</td>
+            <td>{{ customer.mail }}</td>
+            <td>{{ customer.customer_type }}</td>
             <td>
               <button
                 pButton
@@ -45,7 +53,7 @@
                 icon="pi pi-sync"
                 severity="warning"
                 class="mr-1"
-                [routerLink]="['/branch/edit', branch.id]"
+                [routerLink]="['/persons/customer/edit', customer.id]"
               >
               </a>
   
@@ -55,7 +63,7 @@
                 severity="danger"
                 icon="pi pi-eraser"
                 class="mr-1"
-                (click)="delete(branch.id)"
+                (click)="delete(customer.id)"
               >
               </button>
             </td>
